SEARCH-116 Fixed datastore navigation small screen not scrolling issue.

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -689,7 +689,9 @@ input.search-box-input {
   margin: 0 0.5rem; }
 
 .datastore-scroll-x {
-  white-space: nowrap; }
+  white-space: nowrap;
+  overflow-x: auto;
+  padding-top: 3px; }
 
 .datastore-scroll-gradient {
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(248, 248, 248, 0)), color-stop(100%, #f8f8f8));
