--- a/src/stylesheets/search/_datastore-list.scss
+++ b/src/stylesheets/search/_datastore-list.scss
@@ -15,6 +15,8 @@
 
 .datastore-scroll-x {
   white-space: nowrap;
+  overflow-x: auto;
+  padding-top: 3px;
 }
 
 .datastore-scroll-gradient {
